--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "framer-motion": "^12.7.3",
     "graphql": "^16.8.1",
     "lucide-react": "^0.554.0",
-    "next": "15.2.3",
+    "next": "^15.2.5",
     "payload": "^3.34.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
@@ -62,10 +62,7 @@
     "tailwindcss": "^4.0.15",
     "typescript": "5.7.3"
   },
-  "engines": {
-    "node": "24.x",
-    "pnpm": "^9"
-  },
+  
   "pnpm": {
     "onlyBuiltDependencies": [
       "sharp"
