--- a/package.json
+++ b/package.json
@@ -19,12 +19,13 @@
     "@payloadcms/db-postgres": "^3.34.0",
     "@payloadcms/email-nodemailer": "^3.34.0",
     "@payloadcms/graphql": "^3.34.0",
-    "@payloadcms/next": "^3.34.0",
+    "@payloadcms/next": "^3.64.0",
     "@payloadcms/payload-cloud": "^3.34.0",
-    "@payloadcms/plugin-cloud-storage": "^3.34.0",
-    "@payloadcms/richtext-lexical": "^3.34.0",
+    "@payloadcms/plugin-cloud-storage": "^3.64.0",
+    "@payloadcms/richtext-lexical": "^3.64.0",
     "@payloadcms/storage-s3": "^3.34.0",
     "@payloadcms/storage-vercel-blob": "^3.34.0",
+    "@payloadcms/ui": "^3.64.0",
     "@tsparticles/react": "^3.0.0",
     "@tsparticles/slim": "^3.8.1",
     "aws-sdk": "^2.1692.0",
@@ -33,7 +34,7 @@
     "framer-motion": "^12.7.3",
     "graphql": "^16.8.1",
     "lucide-react": "^0.554.0",
-    "next": "^15.2.5",
+    "next": "^15.2.6",
     "payload": "^3.34.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
@@ -62,7 +63,6 @@
     "tailwindcss": "^4.0.15",
     "typescript": "5.7.3"
   },
-  
   "pnpm": {
     "onlyBuiltDependencies": [
       "sharp"
